# CGEngine

./: CMakeLists.txt  Doxyfile  README.md
.github/: copilot-instructions.md.txt
docs/: _actuator_8h.html  _actuator_8h_source.html  _animation_behavior_8cpp.html  _animation_behavior_8h.js  _animation_behavior_8h_source.html  _behavior_8cpp.html  _behavior_8h.html  _behavior_8h_source.html  _body_8cpp.html  _body_8h.html  _body_8h_source.html  _bounds_behavior_8h.html  _bounds_behavior_8h_source.html  _camera_8cpp.html  _camera_8h.html  _camera_8h_source.html  _common_scripts_8cpp.html  _common_scripts_8cpp.js  _common_scripts_8h_source.html  _common_v_arrays_8cpp.js  _common_v_arrays_8h_source.html  _data_map_8h.js  _data_map_8h_source.html  _engine_8cpp.html  _engine_8cpp.js  _engine_8h.html  _engine_8h_source.html  _font_cache_8cpp.html  _font_cache_8h.js  _font_cache_8h_source.html  _global_time_8h.html  _global_time_8h.js  _global_time_8h_source.html  _input_data_controller_8h_source.html  _input_map_8cpp.html  _input_map_8h.html  _input_map_8h_source.html  _light_8cpp.html  _light_8h.html  _light_8h.js  (+313 more)
docs/html/: _actuator_8h.html  _actuator_8h.js  _actuator_8h_source.html  _animation_behavior_8cpp.html  _animation_behavior_8h.html  _animation_behavior_8h_source.html  _behavior_8cpp.html  _behavior_8h.html  _behavior_8h.js  _behavior_8h_source.html  _body_8cpp.html  _body_8h.html  _body_8h.js  _body_8h_source.html  _bounds_behavior_8cpp.html  _bounds_behavior_8h.html  _bounds_behavior_8h.js  _bounds_behavior_8h_source.html  _camera_8cpp.html  _camera_8h.html  _camera_8h.js  _camera_8h_source.html  _common_scripts_8cpp.html  _common_scripts_8h.html  _common_scripts_8h.js  _common_scripts_8h_source.html  _common_v_arrays_8cpp.html  _common_v_arrays_8h.html  _common_v_arrays_8h.js  _common_v_arrays_8h_source.html  _data_map_8h.html  _data_map_8h_source.html  _engine_8cpp.html  _engine_8h.html  _engine_8h.js  _engine_8h_source.html  _font_cache_8cpp.html  _font_cache_8h.html  _font_cache_8h_source.html  _global_time_8cpp.html  (+338 more)
docs/html/search/: all_1.js  all_12.js  all_13.js  all_16.js  all_1a.js  all_3.js  all_4.js  all_5.js  all_8.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_b.js  classes_f.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_7.js  enumvalues_0.js  enumvalues_10.js  enumvalues_3.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  enumvalues_c.js  enumvalues_e.js  enumvalues_f.js  files_1.js  files_5.js  files_9.js  functions_0.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  (+25 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_19.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  defines_1.js  enums_5.js  enums_6.js  enumvalues_1.js  enumvalues_11.js  (+52 more)
resources/: Caveman_Test.fbx  Caveman_Test2.fbx  Mesh.mtl  RiggedMesh.fbx  RiggedMesh.mtl  Shapes.fbx  mapData_.txt  mapData_1.txt
resources/shaders/: StdAnimationShader.txt  StdFragShader.frag  StdFragShader.txt  StdVertexShader.txt  StdVertexShader.vert
src/: TilemapScene.cpp  main.cpp
src/Behavior/: AnimationBehavior.cpp  AnimationBehavior.h  Behavior.cpp  Behavior.h  BoundsBehavior.h
src/Bindings/: CMakeLists.txt
src/Body/: BinaryStateBody.h  Body.cpp  Body.h  ButtonBody.cpp  ButtonBody.h  SpriteAnimBody.cpp  SpriteAnimBody.h  SpriteBody.cpp  SpriteBody.h
src/Core/Animation/: Animation.cpp  Animation.h  Animator.cpp  Animator.h
src/Core/AssetManager/: AssetLoader.h  AssetManager.h
src/Core/Behavior/: Behavior.cpp  Behavior.h
src/Core/Body/: Body.cpp  Body.h
src/Core/Camera/: Camera.cpp  Camera.h
src/Core/Engine/: Engine.cpp  Engine.h  EngineSystem.cpp  EngineSystem.h
src/Core/Importer/: MeshImporter.cpp  MeshImporter.h
src/Core/Input/: InputMap.cpp  InputMap.h
src/Core/Interpreter/: InterpreterManager.h
src/Core/Light/: Light.cpp  Light.h
src/Core/Logging/: Logging.cpp  Logging.h
src/Core/Material/: Material.cpp  Material.h
src/Core/Mesh/: Bone.cpp  Bone.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/Core/ResourceCaches/: FontCache.cpp  FontCache.h
src/Core/Scripts/: Actuator.h  Script.cpp  Script.h  ScriptDomain.cpp  ScriptDomain.h  ScriptMap.cpp  ScriptMap.h
src/Core/Shader/: Program.cpp  Program.h  Shader.cpp  Shader.h  UniformBuffers.h
src/Core/Skeleton/: Skeleton.cpp  Skeleton.h
src/Core/Time/: GlobalTime.cpp  GlobalTime.h
src/Core/Timers/: Timer.h  TimerMap.cpp  TimerMap.h
src/Core/Types/: DataMap.h  Types.h  UniqueDomain.h  UniqueIntegerStack.h  V2.cpp  V2.h  V3.h
src/Core/Types/DataControllers/: InputDataController.h  OutputDataController.h  ProcessDataController.h
src/Core/World/: Global.h  Renderer.cpp  Renderer.h  Screen.cpp  Screen.h  World.cpp  World.h
src/Drawables/: Tilemap.cpp  Tilemap.h
src/Input/: InputMap.cpp  InputMap.h
src/Logging/: Logging.h
src/ResourceCaches/: FontCache.cpp  FontCache.h  TextureCache.cpp  TextureCache.h
src/Scenes/: GlobalTime.h  Scene.cpp  Scene.h  SceneLayout.h
src/Scripts/: Actuator.h  CommonScripts.cpp  CommonScripts.h  Script.h  ScriptDomain.cpp  ScriptDomain.h  ScriptMap.cpp  ScriptMap.h
src/Standard/Behaviors/: AnimationBehavior.cpp  AnimationBehavior.h  BoundsBehavior.cpp  BoundsBehavior.h
src/Standard/Drawables/: Tilemap.cpp  Tilemap.h
src/Standard/Meshes/: CommonVArrays.cpp  CommonVArrays.h
src/Standard/Models/: CommonModels.cpp  CommonModels.h
src/Standard/Scripts/: CommonScripts.cpp  CommonScripts.h
src/Timers/: Timer.h  TimerMap.cpp  TimerMap.h
src/Types/: DataMap.h  DataStack.cpp  DataStack.h  Types.h  UniqueDomain.h  UniqueIntegerStack.h  V2.cpp
src/World/: InputMap.cpp  Renderer.cpp  Screen.cpp  Screen.h  World.cpp  World.h  WorldInstance.cpp  WorldInstance.h
(+2 files in other folders)
